# kokoro

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
demo/: README.md  app.py  en.txt  frankenstein5k.md  gatsby5k.md  requirements.txt
examples/: device_examples.py  export.py  phoneme_example.py
kokoro/: __init__.py  istftnet.py  model.py  models.py  modules.py  pipeline.py
kokoro-js-python/: main.py  pyproject.toml
kokoro-js-python/src/: splitter.py
kokoro.js/: .gitignore  README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json
kokoro.js/demo/: README.md  index.html  package-lock.json  package.json  vite.config.js
kokoro.js/demo/src/: App.jsx  utils.js  worker.js
kokoro.js/src/: kokoro.js  phonemize.js  splitter.js  voices.js
kokoro.js/tests/: phonemize.test.js  splitting.test.js
tests/: test_custom_stft.py
