[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kokoro"
version = "0.7.16"
description = "TTS"
readme = "README.md"
authors = [
    { name="hexgrad", email="hello@hexgrad.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10, <3.13"
dependencies = [
    "huggingface_hub",
    "loguru",
    "misaki[en]>=0.7.16",
    "numpy==1.26.4",
    "scipy",
    "torch",
    "transformers"
]

[project.scripts]
kokoro = "kokoro.__main__:main"

[tool.hatch.build.targets.wheel]
only-include = ["kokoro"]
only-packages = true

[project.urls]
Homepage = "https://github.com/hexgrad/kokoros"
Repository = "https://github.com/hexgrad/kokoro"
